# portfolio-backend

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yml
migrations/: 1_create_notes_table.up.sql
src/: main.rs
