[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
dotenv = "0.15.0"
jsonwebtoken = "10.3.0"
once_cell = "1.21.4"
openssl-sys = "0.9.112"
rand = "0.10.0"
salvo = {version = "0.89.2", featues = ["cors", "jwt-auth", "anyhow", "rate-limiter"]}
salvo-cors = "0.89.2"
salvo-jwt-auth = "0.91.1"
salvo-rate-limiter = "0.89.2"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"]}
time = "0.3.47"
tokio = {version = "1.50.0", featues = ["macros"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
